# GrassLM

./: .gitignore  README.MD
app/GrassLM/: GrassLM-Bridging-Header.h  Info.plist
app/GrassLM/App/: ContentView.swift  GrassLMApp.swift
app/GrassLM/Assets.xcassets/GrassIcon.imageset/: Contents.json
app/GrassLM/Bridge/: GrassLMBridge.cpp  GrassLMBridge.h  GrassLMWrapper.swift
app/GrassLM/Models/: ChatStore.swift  Conversation.swift  InterpretabilityData.swift
app/GrassLM/ViewModels/: ChatViewModel.swift
app/GrassLM/Views/: ChatView.swift  MessageBubble.swift  ModelSelectorView.swift  SettingsView.swift  SidebarView.swift
app/GrassLM/Views/Interpretability/: EmbeddingHeatmapView.swift  InterpretabilityOverlay.swift  LayerActivationView.swift  NeuralNetworkDiagramView.swift  SharedComponents.swift  TokenizationView.swift  TopPredictionsView.swift
cpp/: CMakeLists.txt  grasslm_cli.cpp
cpp/include/grasslm/: generator.h  layers.h  model.h  tensor.h  tokenizer.h  weight_loader.h
cpp/src/: generator.cpp  layers.cpp  model.cpp  tensor.cpp  tokenizer.cpp  weight_loader.cpp
cpp/tests/: test_layers.cpp  test_numerical.cpp  test_tensor.cpp
models/GrassLM-100M/: config.json
models/GrassLM-10M/: config.json
python/: evaluate.py  export_test_data.py  generate.py  requirements.txt  train.py
python/grasslm/: __init__.py  data.py  export.py  layers.py  model.py  registry.py
python/tests/: test_export.py  test_layers.py  test_model.py
